test/e2e/testdata/cors-http-cors-filter.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-cors-exact
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /cors-exact
    backendRefs:
    - name: infra-backend-v1
      port: 8080
    filters:
    - type: CORS
      cors:
        allowOrigins:
        - "https://www.foo.com"
        - "https://www.bar.com"
        - "https://*.foobar.com"
        allowMethods:
        - GET
        - POST
        - PUT
        - PATCH
        - DELETE
        - OPTIONS
        allowHeaders:
        - "x-header-1"
        - "x-header-2"
        exposeHeaders:
        - "x-header-3"
        - "x-header-4"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-cors-wildcard
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /cors-wildcard
    backendRefs:
    - name: infra-backend-v1
      port: 8080
    filters:
    - type: CORS
      cors:
        allowOrigins:
        - "https://*"  # Gateway API spec requires scheme to be included in allowOrigins
        allowMethods:
        - "*"
        allowHeaders:
        - "*"
        exposeHeaders:
        - "*"
---
# HTTPRoute with CORS filter and method match to verify that OPTIONS method is implicitly allowed for CORS preflight
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-cors-specific-method
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /cors-specific-method
      method: GET
    backendRefs:
    - name: infra-backend-v1
      port: 8080
    filters:
    - type: CORS
      cors:
        allowOrigins:
        - "https://www.foo.com"
        allowMethods:
        - GET
        - OPTIONS
        allowHeaders:
        - "*"
        exposeHeaders:
        - "*"
